# metagit-cli

./: .cursorignore  .cursorrules  .env.example  .env_example  .envrc  .gitignore  .gitleaks.toml  .gitnexusignore  .metagit.example.yml  .metagit.new.yaml  .metagit.yml  .metagit.yml.old  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  Dockerfile  Dockerfile.api  GEMINI.md  MANIFEST.in  README.md  Secretfile.yml  Taskfile.yml  docker-compose.dev.yml  docker-compose.multitenant.yml  docker-compose.yml  llms.txt  lychee.toml  metagit.config.yaml  mise.toml  mkdocs.yml  project.metagit.md  pyproject.toml  release-please-config.json  spec.md  test_enhanced_fuzzyfinder.py  test_migration.py  test_textual_migration.py
.claude/skills/: generated  gitnexus
.cursor/: mcp.json
.cursor/rules/: github-cli.mdc  project-level.mdc
.cursor/skills/: generated
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: docker-build-publish.yaml  docker.yaml  docs.yaml  lint-and-test.yaml  lint.yaml  pr-and-push.yaml  publish-cli.yaml  publish-docker.yaml  pypi-publish-on-release.disabled  release-please.yaml  release.yaml  semantic-release.yaml  test.disabled  test.yaml
.metagit/: metagit_config.schema.json
.metagit-agents/orchestration-overseer/: OVERLAY.md  orchestration-overseer.md.tpl  orchestration-overseer.opencode.md.tpl  template.yaml
.metagit/default/: metagit  metagit_cli  workspace.code-workspace
.metagit/local/: workspace.code-workspace
.mex/: AGENTS.md  ROUTER.md  SETUP.md  SYNC.md  config.json
.mex/context/: architecture.md  conventions.md  decisions.md  mcp-runtime.md  setup.md  stack.md
.mex/patterns/: INDEX.md  acl-rfc-series.md  add-cli-command.md  add-managed-repo-search.md  add-mcp-tool.md  add-prompt-catalog-kind.md  agent-coordination-acl.md  agent-scheduler.md  aos-composition.md  atlas-local.md  bootstrap-metagit-config.md  changelog-release.md  cli-tui-hub.md  context-pack-repo-cards.md  debug-mcp-runtime.md  debug-workspace-discovery.md  derived-projects-skills-surface.md  extend-agents-web-console.md  github-gh-auth.md  mcp-cross-project-dependencies.md  mcp-layered-resources.md  mcp-project-context.md  merge-orchestrator-store.md  (+17 more)
docker/: nginx-mt.conf
docs/: agents.md  architecture-diagram.py  cli_reference.md  development.md  docker_multitenant.md  hermes-iac-workspace-guide.md  hermes-orchestrator-workspace.md  index.md  install.md  llm-detailed.txt  llm.txt  metagit-rewrite-workspace.md  multi_tenancy.md  overview.md  per_tenant_configuration.md  record_conversion.md  repository_detection.md  skills.md  terminology.md
examples/: README_fuzzyfinder_tests.md  analyze-repo.py  appconfig_example.yml  categorize_directory.py  cli_record_example.py  datetime_serialization_fix_example.py  detection_config_example.yml  detection_manager_config_example.py  detection_manager_example.py  directory_details.yml  directory_summary.yml  enhanced_fuzzyfinder_demo.py  fuzzyfinder_comprehensive_test.py  fuzzyfinder_custom_colors_demo.py  fuzzyfinder_debug_test.py  fuzzyfinder_preview_test.py  fuzzyfinder_simple_colors.py  fuzzyfinder_simple_test.py  get_git_files.py  gitcache_differences_example.py  gitcache_example.py  load_config_from_yaml.py  metagit.umbrella.yml  provider_example.py  record_conversion_advanced_example.py  record_conversion_example.py  record_manager_example.py  repository_analysis_example.py  repository_detection.py  tenant_a_config.yml  tenant_config_example.yml  test_appconfig_env.py  test_record_manager_simple.py  test_timezone_fix.py  userprompt_example.py
graphify-out/: .graphify_detect.json  .graphify_root
metagit/: models.py
metagit_detect/: __init__.py  cli.py  config.py  git_branch_analysis.py  git_cicd_analysis.py  git_project.py  models.py
metagit_detect_flow/: README.md  pyproject.toml
metagit_detect_flow/src/metagit_detect_flow/: main.py
metagit_detect_flow/src/metagit_detect_flow/crews/project_understanding_crew/: project_understanding_crew.py
metagit_detect_flow/src/metagit_detect_flow/crews/research_crew/config/: agents.yaml  tasks.yaml
metagit_detect_flow/src/metagit_detect_flow/tools/: fetch_file_content_tool.py  git_search_tool.py  github_search.py  human.py  website_search_tool.py
providers/: base.py  github.py  manager.py
schemas/: metagit_appconfig.schema.json  metagit_config.schema.json
scripts/: agent-template-fixtures.yml  check-doc-links.zsh  check_modality_parity.py  delete_legacy_tags.py  generate_modality_registry.py  generate_web_logo.py  manifest-fixtures.yml  modality-parity.yml  prepush-gate.py  prepush-gate.zsh  release_changelog.py  release_next_version.py  scaffold-agent-templates.py  sync_docs_changelog.py  tag_internal_skills.py  validate-agent-template-fixtures.py  validate-manifest-fixtures.py  validate_changelog.py  validate_skills.py
site/: 404.html  index.html
skills/: README.md
src/: git_branch_analysis.py  git_cicd_analysis.py  git_project.py
tasks/: Taskfile.github.yml  clean-cached.py
tests/: conftest.py  test_api_endpoints.py  test_api_models.py  test_appconfig_display.py  test_appconfig_init.py  test_appconfig_models.py  test_config_example_generator.py  test_config_models.py  test_config_yaml_display.py  test_detect_manager.py  test_detection_service.py  test_documentation_graph_models.py  test_gitcache.py  test_project_manager_dedupe.py  test_project_manager_prune.py  test_project_manager_select_repo.py  test_project_search_service.py  test_project_source_models.py  test_project_source_sync.py  test_pythonpath_guard.py  test_record_conversion.py  test_record_manager.py  test_record_models.py  test_skills_installer.py  test_tenant_middleware.disabled  test_tenant_middleware.py  test_tenant_services.py  test_utils_common.py  test_utils_files.py  test_utils_fuzzyfinder.py  test_utils_logging.py  test_utils_userprompt.py  test_utils_yaml_class.py  test_workspace_dedupe.py  test_workspace_index_service.py
utils/: common.py  fuzzyfinder.py  logging.py  yaml_class.py
web/: package-lock.json  package.json  vite.config.ts  vitest.config.ts
(+957 files in other folders)
