[project]
name = "metagit_detect_flow"
version = "0.1.0"
description = "metagit_detect_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.0,<1.0.0",
]

[project.scripts]
kickoff = "metagit_detect_flow.main:kickoff"
run_crew = "metagit_detect_flow.main:kickoff"
plot = "metagit_detect_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
